src/App.css
body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
  background-image: url('background.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: cover;
  color: #333;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  min-height: 100vh;
  text-align: center;
  overflow-y: auto; /* Enable vertical scrolling */
}

#root {
  width: 100%;
  max-width: 1200px;
  padding: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 8px;
  margin-top: 20px;
}

h1 {
  color: #00796b;
}

.current-weather, .forecast, .search {
  margin: 20px auto;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #ffffff;
  max-width: 600px;
  transition: transform 0.3s ease-in-out;
}

.forecast-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.forecast-day {
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 10px;
  background-color: #e0f7fa;
  margin: 10px;
  transition: transform 0.3s ease-in-out;
}

input {
  padding: 10px;
  margin-right: 10px;
  border: 1px solid #00796b;
  border-radius: 4px;
  width: calc(100% - 100px); /* Adjust width to fit the button */
}

button {
  padding: 10px;
  background-color: #00796b;
  color: #ffffff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease-in-out;
}

button:hover {
  background-color: #004d40;
}

.current-weather:hover, .forecast-day:hover {
  transform: scale(1.05);
}

